style: fix minor alignment and color issues.

--- a/src/app/pages/user-profile/user-profile.page.scss
+++ b/src/app/pages/user-profile/user-profile.page.scss
@@ -24,10 +24,6 @@
   }
 }
 
-.graybutton {
-  color: #aaaaaa;
-}
-
 .formInvalid {
   color: #ea6153;
   text-align: center;
